--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     scroll-behavior: smooth;
 }
 #wrapper{
-    max-width: 100%;
+    width: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@
     position:relative;
     display: flex;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     /* border: solid; */
 }
 
