--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     background-color: #F1EAFF;
     /* height: 100vh; */
 }
@@ -18,27 +18,24 @@
     /* position: absolute; */
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 100vw;
     height: 48px;
     background-color: #ad89f3;
     border-bottom: solid white 2px;
 }
-
 .motivation{
     display: flex;
     justify-content: center;
     align-items: center;
     /* border: solid; */
     width: 500px;
-    font-size: 1.2rem;
+    font-size: 20px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     color: rgb(49, 49, 49);
     /* color: grey; */
 }
 .workspaces{
-    position:relative;
     display: flex;
     width: 100%;
     height: 100%;
@@ -46,43 +43,10 @@
 }
 
 .side-panel{
-    /* position: absolute; */
-    height: 100%;
-    width: 0px;
-    background-color: #d7c4fd;
-    border-right: solid white 2px;
-    transition: width 0.2s;
-}
-.sidebar-open{
-    
     height: 100%;
     width: 350px;
     background-color: #d7c4fd;
     border-right: solid white 2px;
-    transition: width 0.2s;
-}
-.sidebar-content{
-    position: relative;
-    height: calc(100% - 100px);
-}
-.side-toggle{
-    position:absolute;
-    height: 40px;
-    width: 30px;
-    border: none;
-    /* border: white solid 2px; */
-    right: -30px;
-    top:calc(100% / 2.3);
-    background: none;
-    font-size: 30px;
-    font-weight: bold;
-    margin: 0 auto;
-    color: rgb(170, 168, 168);
-    transition: color 0.1s;
-}
-.side-toggle:hover{
-    color: black;
-    transition: 0.2s;
 }
 .profile{
     width: 100%;
@@ -92,13 +56,13 @@
 .task-content{
     padding-left: 100px;
     /* border: solid; */
-    width: 100%
+    width: 100%;
 }
 .task-head{
     height: 100px;
     /* border: solid; */
     padding: 15px 0px;
-    font-size: 3.1rem;
+    font-size: 45px;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
 }
@@ -126,6 +90,7 @@
     width: 100%;
     display: flex;
     border-top: solid white 2px;
+    padding-left: 15px;
     /* justify-content: space-between; */
 }
 .add-task-field{
@@ -133,108 +98,24 @@
     border: solid;
     background: none;
     height: 100%;
-    width: 100%;
+    width: calc(100% - 115px);
     border-style: none;
     outline: none;
-    font-size: 0.98rem;
-    padding-right: 15px;
-    padding-left: 15px;
+    font-size: 16px;
+    /* padding-left: 15px; */
     font-family: 'Poppins', sans-serif;
 }
 .add-task-button{
     height: 100%;
     width: 100px;
-    font-size: 1rem;
+    font-size: 18px;
     font-family: 'Poppins', sans-serif;
     background: none;
     border: none;
     border-left: solid white 2px;
-    transition: background-color 0.15s;
+    transition: background-color 0.3s;
 }
 .add-task-button:hover{
     background-color:#d7c4fd;
     transition: background-color 0.3s;
-}
-
-@media (max-width:1200px) and (min-width:901px){
-    html{
-        font-size: 14px;
-    }
-    .task-content{
-        padding-left: 70px;
-    }
-    .add-task{
-        padding-right: 70px;
-    }
-}
-@media (max-width:900px) and (min-width:601px){
-    html{
-        font-size: 14px;
-    }
-    .side-panel{
-        position:absolute;
-        width: 350px;
-    }
-    .sidebar-open{
-        width: 0px;
-    }
-    .task-content{
-        padding-left: 60px;
-    }
-    .add-task{
-        padding-right: 60px;
-    }
-}
-@media (max-width:600px){
-
-}
-@media (max-width:600px) and (min-width:480px){
-    html{
-        font-size: 13px;
-    }
-    .side-panel{
-        position:absolute;
-        width: 280px;
-    }
-    .profile{
-        height: 80px;
-    }
-    .sidebar-open{
-        width: 0px;
-    }
-    .task-content{
-        padding-left: 40px;
-    }
-    .add-task{
-        padding-right: 40px;
-    }
-}
-@media (max-width:479px){
-    html{
-        font-size: 13px;
-    }
-    .side-panel{
-        position:absolute;
-        width: 260px;
-    }
-    .profile{
-        height: 70px;
-    }
-    .sidebar-open{
-        width: 0px;
-    }
-    .task-content{
-        padding-left: 30px;
-    }
-    .add-task{
-        padding-right: 30px;
-    }
-    .add-task-button{
-        width: 60px;
-    }
-}
-@media (max-width:450px){
-    .task-head{
-        font-size: 2rem;
-    }
 }
