--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     align-items: center;
     /* overflow-x: hidden; */
     background-color: #F1EAFF;
-    height: 100vh;
+    /* height: 100vh; */
 }
 #header{
     /* position: absolute; */
