--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* overflow-x: hidden; */
+    overflow: hidden;
     background-color: #F1EAFF;
-    /* height: 100vh; */
+    height: 100vh;
 }
 #header{
     /* position: absolute; */
