--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,16 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
+body{
+    overflow: hidden;
+}
 #wrapper{
     width: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
     background-color: #F1EAFF;
     height: 100vh;
 }
