--- a/styles.css
+++ b/styles.css
@@ -91,13 +91,15 @@ body{
     /* border: white solid 2px; */
     right: -30px;
     top:calc(100% / 2.3);
+    top: 50%;
     background: none;
     font-size: 30px;
     font-weight: bold;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     color: rgb(170, 168, 168);
     transition: color 0.1s;
 }
+
 
 .profile{
     width: 100%;
@@ -105,6 +107,7 @@ body{
     border-bottom: solid white 2px;
 }
 .content{
+    position: relative;
     padding-left: 100px;
     padding-right: 100px;
     /* border: solid; */
@@ -204,41 +207,25 @@ body{
     border: solid rgb(109, 109, 109) 2px;
     border-radius: 5px;
     display: flex;
-    position: relative;
     height: 4rem;
     margin-top: 0.8rem;
     padding-left: 0.8rem;
 
 }
-.task-hover{
+
+.task-box-2{    
+
+    right: 0px;
+    z-index: 1;
+    width: 0;
+    height: 100%;
+    background-color: rgb(238, 81, 81);
     display: flex;
     align-items: center;
-    position: absolute;
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    transition: opacity 0.2s;
-}
-.show-details{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.2rem;
-    width: 85%;
-    height: 100%;
-    background-color: #f1eaffd8;
-    transition: background-color 0.2s;
-}
-.remove-task{
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
-    padding-left: 0.8rem;
-    font-size: 1.2rem;
-    width: 15%;
-    height: 100%;
-    background-color: rgba(238, 82, 82, 0.959);
-    transition: background-color 0.2s;
+    overflow: hidden;
+    font-size: 1.1rem;
+    transition: width 0.2s;
+    /* padding-left: 1rem; */
 }
 .task-det{
     display: flex;
@@ -247,10 +234,12 @@ body{
     justify-content: center;
 }
 .task-name{
-    width: 90%;
+    width: 100%;
     font-size: 1.1rem;
     display: flex;
-    align-items: center;
+
+    height: 1.5rem;
+    overflow:hidden;
 }
 .completion-status{
     width: 10%;
@@ -269,8 +258,34 @@ body{
     display: none;
 }
 .invisible-task-box{
-    border: none;
+    opacity: 0;
     /* visibility: none; */
+}
+.detailed-task-panel{
+    /* visibility: hidden; */
+    z-index: 8;
+    position: absolute;
+    right: 0;
+    height: 100%;
+    border-left: solid white 2px;
+    background-color: #d7c4fd;
+    transition: width 1s;
+}
+.detailed-task-panel-open{
+    /* visibility: visible; */
+    width: 40rem;
+    transition: width 1s;
+}
+.close-task-panel{
+    position: absolute;
+    top: 0.2rem;
+    left: 0.2rem;
+    font-size: 2rem;
+    font-weight: 500;
+    background: none;
+    border: none;
+    color: rgb(116, 116, 116);
+    transition: color 0.15s;
 }
 @media (hover: hover){
     
@@ -288,21 +303,21 @@ body{
         background-color:#d7c4fd;
         transition: background-color 0.3s;
     }
+    .task-box:hover .task-box-2{
+        display: flex;
+        width: 10%;
+        transition: width 0.2s;
+        padding-left: 0.8rem;
+    }
+    .task-box:hover .task-det{
+        width: 80%;
+        transition: width 0.2s;
+    }
+    .close-task-panel:hover{
+        color: black;
+        transition: color 0.15s;
+    }
 
-    .task-box:hover>.task-hover{
-        opacity: 1;
-        backdrop-filter: blur(2px);
-        transition: opacity 0.3s, backdrop-filter 0.3s;
-    }
-    .show-details:hover{
-        background-color: #f1eaff9c;
-        
-        transition: background-color 0.3s;
-    }
-    .remove-task:hover{
-        background-color: rgb(238, 82, 82);
-        transition: background-color 0.3s;
-    }
 }
 @media (hover: none){
     .panel-item:focus-visible{
@@ -327,7 +342,27 @@ body{
         padding-left: 60px;
         padding-right: 60px;
     }
+    .task-det{
+        width: 85%;
+    }
+    .completion-status{
+        width: 15%;
+    }
 
+}
+@media (hover: hover) and (max-width:1200px){
+    .task-box:hover .task-det{
+        width: 70%;
+        transition: width 0.2s;
+    }
+    .task-box:hover .completion-status{
+        width: 15%;
+        transition: width 0.2s;
+    }
+    .task-box:hover .task-box-2{
+        width: 15%;
+        transition: width 0.2s;
+    }
 }
 @media (max-width:900px) and (min-width:601px){
     html{
@@ -344,6 +379,7 @@ body{
         padding-left: 50px;
         padding-right: 50px;
     }
+    
 
 }
 @media (max-width:900px){
@@ -355,6 +391,26 @@ body{
     }
     .panel-item{
         height: 70px;
+    }
+    .task-det{
+        width: 80%;
+    }
+    .completion-status{
+        width: 20%;
+    }
+}
+@media (hover: hover) and (max-width:900px){
+    .task-box:hover .task-det{
+        width: 60%;
+        transition: width 0.2s;
+    }
+    .task-box:hover .completion-status{
+        width: 20%;
+        transition: width 0.2s;
+    }
+    .task-box:hover .task-box-2{
+        width: 20%;
+        transition: width 0.2s;
     }
 }
 @media (max-width:600px){
