Added notification system and solved the known bug

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -100,7 +100,7 @@
 
                 <div class="community-content hide content-page fade-animation">
                     <div class="content-head">
-                        🫱🏻‍🫲🏻 Communities
+                        🫱🏻‍🫲🏻 Workspaces
                     </div>
                     <div class="comm-container-show">
                         <div class="content-body comm-body">
@@ -117,11 +117,11 @@
                                 <div class="comm-box-2"></div>
                             </div>
                         </div>
-                        <button class="add-comm-btn">Add New Community</button>
+                        <button class="add-comm-btn">Add New Workspace</button>
 
                         <div  onsubmit="return false;" class="add-community hide">
                             <form action="" method="POST" class="add-comm-form">
-                                <label for="commInputName" class="comm_label">Community Name:</label><br>
+                                <label for="commInputName" class="comm_label">Workspace Name:</label><br>
                                 <input type="text" name="commInputName" placeholder="Enter Community name"><br>
                                 <label for="commDescription" class="comm_label">Description:</label><br>
                                 <textarea name="commDescription" id="" placeholder="Write about this community"></textarea><br>
@@ -135,7 +135,7 @@
                                 <input type="date" name="startDate" id=""><br>
                                 <label for="endDate" class="comm_label">End Date:</label><br>
                                 <input type="date" name="endDate" id="">
-                                <button class="save-community" value="add-community">Add Community</button>
+                                <button class="save-community" value="add-community">Add Workspace</button>
                             </form>
                         </div>
 
