Completed Workspace Backend. i.e. fetching all workspaces and adding of workspaces

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -104,7 +104,7 @@
                     </div>
                     <div class="comm-container-show">
                         <div class="content-body comm-body">
-                            <div class="comm-box">
+                            <!-- <div class="comm-box">
                                 <div class="comm-det">
                                     <div class="comm-name"> 
                                         TOish
@@ -115,7 +115,7 @@
                                 </div>
                                 <div class="completion-status">pending</div>
                                 <div class="comm-box-2"></div>
-                            </div>
+                            </div> -->
                         </div>
                         <button class="add-comm-btn">Add New Workspace</button>
 
@@ -150,7 +150,7 @@
     </div>
     <script src="scripts/script.js"></script>
     <script src="scripts/tasks.js"></script>
-    <script src="scripts/communities.js"></script>
+    <script src="scripts/workspaces.js"></script>
 </body>
 
 </html>
