--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -6,17 +6,14 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body{
-    overflow: hidden;
-}
 #wrapper{
     width: 100%;
-    position: absolute;
+    /* position: absolute; */
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #F1EAFF;
-    height: 100vh;
+    height: 100lvh;
 
 }
 #header{
@@ -41,18 +38,19 @@ body{
     background-color: #d7c4fd88;
     backdrop-filter: blur(8px);
     font-size: 1rem;
-    transition-property: width, height, opacity, font-size;
-    transition-duration: 0.4s;
     padding: 0.5rem;
+    transition-property: width, height, opacity, font-size, padding;
+    transition-duration: 0.4s;
+    
 }
 .hide-notification{
     width: 0px;
     height: 0px;
     font-size: 0px;
     opacity:0;
-
     font-size: 0px;
-    transition-property: width, height, opacity, font-size;
+
+    transition-property: width, height, opacity, font-size, padding;
     transition-duration: 0.4s;
 }
 .loading{
@@ -188,7 +186,7 @@ body{
 
 .add-task{
     position: absolute;
-    
+    /* border: solid; */
     display: flex;
     align-items: center;
     height: 50px;
@@ -217,6 +215,11 @@ body{
     display: flex;
     border-top: solid white 2px;
     /* justify-content: space-between; */
+}
+.get-task-form{
+    height: 100%;
+    width: 100%;
+    display: flex;
 }
 .add-task-field{
     resize: none;
@@ -248,7 +251,9 @@ body{
     flex-direction: column;
     gap: 0.5rem;
 }
-
+.important-tag{
+    color: red;
+}
 .task-details-panel input, .task-details-panel textarea{
     height: 2rem;
     background: none;
@@ -345,8 +350,32 @@ body{
     height: 4rem;
     margin-top: 0.8rem;
     padding-left: 0.8rem;
-}
 
+}
+.task-name>input{
+    appearance: none;
+    height: 1rem;
+    border-radius: 50%;
+    border: 2px solid rgb(73, 73, 73);
+    width: 1rem;
+    transition: 100ms ease-in;
+    cursor: pointer;
+    margin: auto 0;
+    margin-right: 0.5rem;
+}
+.task-name>input:checked{
+    border: solid #ac8deb;
+    background-color: #ac8deb;
+    transition: 100ms;
+}
+.delete-task-btn{
+    background: none;
+    border: none;
+    outline: none;
+    font-size: 2rem;
+    margin: auto 0;
+    margin-right: 0.5rem;
+}
 .task-box-2, .comm-box-2{    
 
     right: 0px;
@@ -358,17 +387,19 @@ body{
     background-color: rgb(238, 81, 81);
     display: flex;
     align-items: center;
-    overflow: hidden;
+    /* overflow: hidden; */
     font-size: 1.1rem;
     transition: width 0.2s;
     /* padding-left: 1rem; */
 }
 .task-det, .comm-det{
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 90%;
     justify-content: center;
 }
+
 .task-name, .comm-name{
     width: 100%;
     font-size: 1.1rem;
@@ -385,7 +416,7 @@ body{
 }
 .other-details{
     display: flex;
-    gap: 1.4rem;
+    gap: 0.7rem;
     font-size: 0.9rem;
     /* width: 100px; */
     /* border: solid; */
@@ -411,9 +442,9 @@ body{
     backdrop-filter: blur(8px);
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    padding: 0rem;
     transition-property: width, opacity;
-    transition-duration: 0.2s;
+    transition-duration: 0.4s;
     overflow-y:scroll;
 }
 .detail-panel{
@@ -421,19 +452,18 @@ body{
     -ms-overflow-style: none;
     scrollbar-width: none; 
 }
-.detail-panel::-webkit-scrollbar {
-    display: none;
-}
+
 .task-description{
     resize: none;
 }
 .detail-panel-open{
     /* visibility: visible; */
-    /* display: flex; */
+    display: flex;
     width: 40rem;
     opacity: 1;
+    padding: 2rem;
     transition-property: width, opacity;
-    transition-duration: 0.2s;
+    transition-duration: 0.4s;
 }
 .close-panel{
     position: absolute;
@@ -520,8 +550,78 @@ body{
     transition: background-color 0.2s;
     font-size: 1rem;
 }
-@media (hover: hover){
+.task-box-checkbox{
+    position: absolute;
+    left: -7px;
+    appearance: none;
+    height: 1rem;
+    border-radius: 5px;
+    border: 2px solid rgb(73, 73, 73);
+    width: 1rem;
+    transition: 100ms ease-in;
+    cursor: pointer;
+}
+.task-box-checkbox:checked{
+    border: solid #ac8deb;
+    background-color: #ac8deb;
+    transition: 100ms;
+}
+.warning{
     
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(8px);
+    z-index: 500;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.warning-box{
+    position: relative;
+    min-height: 200px;
+    width: 450px;
+    border: solid red 2px;
+    border-radius: 5px;
+    overflow: hidden;
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    font-size: 1.4rem;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.warning-message{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.warning-choices{
+    /* border: solid; */
+    width: 100%;
+    height: 2.5rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+.warning-choices>button{
+    background:none;
+    outline: none;
+    border: solid rgb(0, 0, 0) 2px;
+    border-radius: 4px;
+    padding: 0.1rem 0.4rem;
+    color: black;
+    transition: 0.2s;
+    font-size: 1.1rem;
+}
+
+.show-warning{
+    display: flex;
+}
+@media (hover: hover){
+    .delete-task-btn{
+        display: none;
+    }
     .panel-item:hover{
         color: rgb(49, 49, 49);
         
@@ -558,7 +658,7 @@ body{
         background-color: #ac8deb;
         transform: background-color 0.2s;
     }
-    .task-details-panel>button:hover{
+    .task-details-panel>button:hover, .warning-choices>button:hover{
         background-color: #ac8deb;
         transition: background-color 0.2s;
     }
@@ -649,10 +749,11 @@ body{
         height: 70px;
     }
     .task-det{
-        width: 80%;
+        width: 84%;
     }
     .completion-status{
-        width: 20%;
+        width: 16%;
+        font-size: 0.8rem;
     }
 }
 @media (hover: hover) and (max-width:900px){
@@ -676,6 +777,15 @@ body{
     .detail-panel-open{
         width: 30rem;
         backdrop-filter: blue(13px);
+    }
+    .other-details{
+        font-size: 0.7rem;
+    }
+    .notification{
+        width: 150px;
+    }
+    .warning{
+        width: 320px;
     }
 }
 @media (max-width:600px) and (min-width:480px){
